--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "start": "concurrently \"npm run build:watch\" \"nodemon --inspect --watch dist\"",
-    "production":"NODE_ENV=production node ."
+    "production": "NODE_ENV=production node ."
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "graphql-tools": "^4.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
