--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/James-Quigley/GloGraphQL#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
@@ -27,6 +28,7 @@
     "graphql-tools": "^4.0.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.16.0",
     "@types/express-graphql": "^0.6.2",
     "@types/graphql": "^14.0.4",
