Add now.sh hosting

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "start": "concurrently \"npm run build:watch\" \"nodemon --inspect --watch dist\"",
-    "production": "NODE_ENV=production node ."
+    "production": "NODE_ENV=production node .",
+    "now-build":"npm run build"
   },
   "repository": {
     "type": "git",
