--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/index.ts", "use": "@now/node-server@canary" }
+    { "src": "graphql/index.ts", "use": "@now/node-server@canary" }
   ]
 }
